Fix line wrapping in <ItemDetails/>; resolves #236

--- a/src/webextension/manage/components/item-details.css
+++ b/src/webextension/manage/components/item-details.css
@@ -42,6 +42,7 @@
 
 .inline-button {
   display: flex;
+  overflow: hidden;
 }
 
 .inline-button > *:first-child {
